tests/conformance/invalid/duplicate_id.hedl
%VERSION: 1.0
%STRUCT: User: [id,name]
---
users: @User
  |u1,Alice
  |u1,Bob
